# aistarlight-go

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  docker-compose.prod.yml  go.mod  go.sum  sqlc.yaml
deploy/: deploy.sh  nginx.conf
docker/: Dockerfile.api  Dockerfile.bot.prebuilt  Dockerfile.prebuilt  Dockerfile.worker  Dockerfile.worker.prebuilt  docker-compose.dev.yaml
migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql  000002_async_tasks.down.sql  000002_async_tasks.up.sql  000003_accounting_pipeline.down.sql  000003_accounting_pipeline.up.sql  000004_accounting_bridges.down.sql  000004_accounting_bridges.up.sql  000005_telegram_users.up.sql  000006_link_tokens.down.sql  000006_link_tokens.up.sql  000007_cleaning_templates.down.sql  000007_cleaning_templates.up.sql  000008_balance_tracking.down.sql  000008_balance_tracking.up.sql  000009_notifications.up.sql  000010_report_approvals.down.sql  000010_report_approvals.up.sql  000011_amended_returns.down.sql  000011_amended_returns.up.sql  000012_knowledge_seed.down.sql  000012_knowledge_seed.up.sql  000013_knowledge_official_bir.down.sql  000013_knowledge_official_bir.up.sql  000014_knowledge_bir_cms.down.sql  000014_knowledge_bir_cms.up.sql  000015_knowledge_citations.down.sql  000015_knowledge_citations.up.sql  000016_tax_rules.down.sql  000016_tax_rules.up.sql  000017_compliance_checklists.down.sql  000017_compliance_checklists.up.sql  000018_multi_jurisdiction.down.sql  000018_multi_jurisdiction.up.sql  000019_knowledge_sg_iras.down.sql  000019_knowledge_sg_iras.up.sql  000020_sg_form_schemas.down.sql  000020_sg_form_schemas.up.sql  000021_sg_tax_rules.down.sql  (+45 more)
ocr-service/: CMakeLists.txt  Dockerfile  main.py  requirements.txt
ocr-service/include/: AngleNet.h  CrnnNet.h  DbNet.h  OcrStruct.h  OcrUtils.h
ocr-service/src/: AngleNet.cpp  CrnnNet.cpp  DbNet.cpp  OcrUtils.cpp  main.cpp
(+411 files in other folders)
